add postgresql supports and upgrade spring-boot dependency